# CUDAGaussianRenderer

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  LICENSE.md  README.md  convert_ply.py  sh_gen.py
doc/: cmd.txt  flowchart_buildtilelist.tex  flowchart_raster.tex
src/: CameraControls.cpp  CameraControls.h  Consts.h  CudaErrorCheck.cpp  Demo.cpp  DeviceBuffer.cu  GaussianRender.cu  GaussianRender.cuh  PlyParser.cpp  PlyParser.h  Utilities.h
